--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -1099,7 +1099,7 @@
   color: #717171;
 }
 
-#entity-search-box {
+.entity-search-box {
   border: 1px solid #3E86FC;
   width: 485px;
   height: 30px;
@@ -1178,6 +1178,7 @@
 .entity-news-categories {
   color: #414141;
   font-size: 14px;
+
   padding: 10px 0;
 }
 
@@ -1192,6 +1193,39 @@
 
 .entity-news-story-description {
   display: inline-block;
+}
+
+/* Entity Video */
+
+.entity-video-search-box {
+  border: 1px solid #A1A1A1;
+}
+
+.entity-video-category {
+  color: #C1C1C1;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.entity-video-indented {
+  padding-left: 5px;
+}
+
+.entity-video-group {
+  display: inline-block;
+  width: 100px;
+  margin-right: 10px;
+}
+
+.entity-video-thumbnail {
+  overflow: hidden;
+  width: 100px;
+  height: 60px;
+}
+
+.entity-video-title {
+  color: #717171;
+  padding: 2px 0;
 }
 
 /* end entity zones */
