fix dictionary result

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -873,11 +873,12 @@
 }
 
 .cliqz-result-dictionary-translations {
-    display: block
+    display: block;
     font-size: 12px;
     background: #f3f3f3;
     padding: 2px 0 2px 15px;
     max-height: 15px;
+    line-height: 15px;
     overflow: hidden;
 }
 
