--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -1101,47 +1101,73 @@
 .entity-news-title {
   color: #414141;
   font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.entity-news-title span {
+  color: #1759a4;
 }
 
 .entity-news-title img {
   float: right;
+  width: 48px;
   margin: -5px -5px 0 0;
 }
 
 .entity-news-story {
   padding: 5px 0;
+  border-bottom: 1px solid #DDDDDD;
+  max-width: 640px;
+  padding-bottom: 8px;
+  margin-bottom: 8px;
+}
+
+.entity-news-story-last {
+  border-bottom: none;
 }
 
 .entity-news-story-image img {
-  width: 70px;
+  width: 80px;
   height: 50px;
 }
 
 .entity-news-story-description {
   vertical-align: top;
-  padding: 5px 0 0 5px;
+  padding: 0 0 0 5px;
 }
 
 .entity-news-story-title {
-  color: #717171;
-  font-size: 15px;
+  color: #333333;
+  font-size: 14px;
+  font-weight: bold;
+  max-width: 550px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .entity-news-story-time {
-  color: red;
+  color: #c92b35;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 550px;
   font-size: 14px;
+  height: 30px;
+  margin-top: 5px;
+}
+
+.entity-news-story-description-text {
+  color: #333333;
 }
 
 .entity-news-categories {
-  color: #414141;
+  color: #437cbc;
   font-size: 14px;
-
-  padding: 10px 0;
 }
 
 .entity-news-categories span{
-  padding: 0 5px;
-  color: #717171;
+  padding-right: 15px;
+  text-decoration: underline;
 }
 
 .entity-news-story-image {
