--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -1066,6 +1066,8 @@
 
 #entity-search-box-icon {
   background-color: #3E86FC;
+  width: 30px;
+  height: 30px;
 }
 
 #entity-search-box-input {
@@ -1082,6 +1084,10 @@
   height: 90px;
   border-radius: 5px;
   margin-right: 5px;
+}
+
+.entity-search-app-image {
+  height: 50px;
 }
 
 .entity-search-container-app-text {
