--- a/cliqz@cliqz.com/chrome/skin/logo.css
+++ b/cliqz@cliqz.com/chrome/skin/logo.css
@@ -14152,6 +14152,9 @@
 .logo-wikipedia-org {
 	background-image: url(http://cliqz:cliqz-245@ux2.fbt.co/brand/touch_icon?q=wikipedia.org);
 }
+.logo-wikipedia-de {
+	background-image: url(http://cliqz:cliqz-245@ux2.fbt.co/brand/touch_icon?q=wikipedia.de);
+}
 .logo-wikiquote-org {
 	background-image: url(http://cliqz:cliqz-245@ux2.fbt.co/brand/touch_icon?q=wikiquote.org);
 }
