New logo for Wer Liefert Was (wlw.de).

--- a/cliqz@cliqz.com/chrome/skin/logo.css
+++ b/cliqz@cliqz.com/chrome/skin/logo.css
@@ -14290,6 +14290,9 @@
 .logo-wizzair-com {
 	background-image: url(http://cdnlogos.cliqz.com/wizzair.com.png);
 }
+.logo-wlw-de {
+	background-image: url(http://cdnlogos.cliqz.com/wlw.de.png);
+}
 .logo-wm2014-infos-de {
 	background-image: url(http://cdnlogos.cliqz.com/wm2014-infos.de.png);
 }
