--- a/cliqz@cliqz.com/chrome/skin/generated.css
+++ b/cliqz@cliqz.com/chrome/skin/generated.css
@@ -6,21 +6,14 @@
 .entity-banking-container {
   height: 170px;
   overflow: hidden;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 16px 16px;
-  position: relative; }
+  padding: 0px 16px;
+  position: relative;
+}
   .entity-banking-container .entity-banking-logo {
+    height: 100%;
     position: absolute;
-    top: 16px;
-    left: 32px;
-    width: 128px;
-    height: 128px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    text-indent: -9999px; }
+    right: 30px;
+  }
   .entity-banking-container .entity-banking-meta {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -29,7 +22,7 @@
     height: 32px;
     position: absolute;
     bottom: 8px;
-    left: 192px;
+    left: 35px;
     line-height: 28px;
     color: rgba(0, 0, 0, 0.4); }
     .entity-banking-container .entity-banking-meta strong {
@@ -47,7 +40,7 @@
     padding: 0 0 16px;
     position: absolute;
     top: 8px;
-    left: 192px; }
+    left: 35px; }
     .entity-banking-container .entity-banking-call2action .item-label {
       float: left;
       margin-right: 16px; }
