remove footer text move search EZ images to can

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -49,7 +49,7 @@
 
 #cliqz-navigation-message {
     font-style: italic;
-    color: #999999;
+    color: #eeeeee;
 }
 /*
 .cliqz-footer-engines:hover #cliqz-engines-box {
