--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -518,13 +518,6 @@
     background: #BFBFBF;
 }
 
-.cliqz-pattern-title {
-    font-size: 22px;
-    font-weight: bold;
-    padding: 4px 5px 5px 5px;
-    margin-right: 20px;
-}
-
 .cliqz-pattern-title-container {
     position:absolute;
     left:0px;
@@ -539,24 +532,66 @@
     -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    white-space:nowrap;
+}
+
+.cliqz-pattern-title-text-container {
+    overflow:hidden;
+    position:absolute;
+    top:0;
+    left:104px;
+    right: 20px;
+    word-wrap: break-word;
+    white-space: nowrap;
+}
+
+.cliqz-pattern-title-text {
+    max-width:70%;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    display:inline-block;
+}
+
+.cliqz-pattern-title-link {
+    display:inline-block;
+    color:darkgray;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding-left: 15px;
+}
+
+.cliqz-pattern-entries {
+    white-space: nowrap;
+    overflow:hidden;
 }
 
 .cliqz-pattern-entry-title {
     font-size: 13px;
     margin-left: 20px;
-    float: left;
+    display:inline-block;
     text-decoration: underline;
     color: #006666;
-    cursor: pointer;
+    overflow: hidden;
+    max-width: 40%;
 }
 .cliqz-pattern-entry-link {
     font-size: 13px;
     color: lightgray;
     font-weight: normal;
     text-decoration: none;
-    padding-left: 10px;
+    padding-left: 25px;
+    max-width: 40%;
+    overflow: hidden;
+    display:inline-block;
 }
-
+.cliqz-pattern-element {
+    line-height: 20px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
 .cliqz-pattern-icon {
 
 }
