- Reenabled old clustering - Support for private browsing - Linked history deletion - Bug fixes

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -136,7 +136,7 @@
 .cliqz-result-left-box {
     width: 30px;
     text-align: center;
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 
 .cliqz-image {
@@ -166,7 +166,7 @@
 }
 
 .cliqz-result-right-box {
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 
 .cliqz-result-title-box {
