wip 2 adult content

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -1301,6 +1301,18 @@
 
 /* end entity zones */
 
+/* adult content */
+
+.cliqz-hide-divs-below ~ div {
+  display: none;
+}
+
+.cliqz-adult-show {
+  color: blue;
+}
+
+/* end adult content */
+
 /* custom */
 .cliqz-custom-text {
     color: #999999;
