ensure that the search service is called only after it gets initialized

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -46,7 +46,7 @@
     background-color: #eeeeee;
     background-size: 20px 14px;
     position: relative;
-    line-height: 16px;
+    height: 16px;
     cursor: ns-resize;
 }
 
