--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -726,6 +726,15 @@
     color: blue;
 }
 
+.cliqz-celeb-picture {
+    float: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 120px;
+    height: 120px;
+}
+
 .cliqz-celeb-images {
     width: 260px;
     height: 130px;
@@ -734,7 +743,6 @@
 }
 
 .cliqz-celeb-image {
-    background-color: white;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
