--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -29,11 +29,11 @@
 }
 
 .cqz-result-h1 {
-	height: 270px;
+	height: 272px;
 }
 
 .cqz-result-h2 {
-	height: 180px;
+	height: 181px;
 }
 
 .cqz-result-h3 {
@@ -48,8 +48,26 @@
 	border-bottom: 1px solid #CCC;
 }
 
+.cqz-result-box:before {
+	content: "";
+	background-color: green;
+	position: absolute;
+	left: -20px;
+	height: 16px;
+	width: 16px;
+	top: 50%;
+	transform: translateY(-50%) rotate(42deg);
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+}
+
 .cqz-result-box[selected="true"] {
 	background-color: #eefafe;
+}
+
+.cqz-result-box[selected="true"]:before {
+	left: -8px;
 }
 
 .cqz-result-box [url]{
@@ -66,9 +84,7 @@
 	width: 60%;
 	padding: 0px 20px;
 	display: inline-block;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
+	overflow: hidden;
 }
 
 /* visited result - history, bookmark, ...*/
@@ -96,6 +112,7 @@
 .cqz-result-url {
 	color: #999999;
 	text-overflow: clip !important;
+	display: inline-block;
 }
 
 .cqz-result-url-ssl {
@@ -126,7 +143,6 @@
 	text-align: center;
 	line-height: 54px;
 	font-size: 22px;
-	font-weight: bold;
 	color: white;
 	background-size: 32px;
 	background-position: center center;
@@ -151,6 +167,17 @@
     position: absolute;
     right: 0px;
     bottom: -14px;
+}
+
+.cqz-result-text {
+	text-align: center;
+	width: 100%;
+}
+
+.cqz-vert-center {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
 .overflow {
