--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -1135,50 +1135,20 @@
   color: #717171;
 }
 
-.entity-search-box {
-  border: 1px solid #3E86FC;
-  width: 485px;
-  height: 30px;
-  margin-bottom: 15px;
-  background-color: white;
-}
 
-#entity-search-box-icon {
-  background-color: #3E86FC;
-  width: 30px;
-  height: 30px;
-}
-
-#entity-search-box-input {
-  vertical-align: top;
-  font-size: 20px;
-  width: 440px;
-  height: 28px;
-  border: none;
-}
 
 .entity-search-container-app {
-  display: inline-block;
-  width: 90px;
-  height: 90px;
-  border-radius: 5px;
-  margin-right: 5px;
-}
-
-.entity-search-app-image {
-  height: 50px;
-}
-
-.entity-search-container-app-text {
-  color: white;
-  padding: 5px 0;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.entity-search-container-app div {
-  margin-top: 15px;
-  text-align: center;
+    display: inline-block;
+    width: 90px;
+    height: 90px;
+    border-radius: 5px;
+    margin-right: 5px;
+    background-position: center 20%;
+    background-repeat: no-repeat;
+    text-align: center;
+    padding-top: 60px;
+    box-sizing: border-box;
+    color: white;
 }
 
 .entity-video-search-box {
