--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -189,6 +189,20 @@
 	text-align: center;
 	width: 100%;
 }
+
+/* EZ generic */
+.cqz-ez-title {
+	font-size: 20px;
+	background-size: 23px;
+	background-repeat: no-repeat;
+	background-position: right;
+	display: inline-block;
+	padding-right: 39px;
+	margin-bottom: 16px;
+}
+
+/* end EZ generic */
+
 /* EZ banking */
 .cqz-ez-banking-box {
 	float: left;
@@ -213,14 +227,7 @@
 
 /* EZ news */
 .cqz-ez-news-title {
-	font-size: 20px;
-	background-size: 23px;
 	background-image: url(http://cdn.cliqz.com/extension/EZ/news/icon.svg);
-	background-repeat: no-repeat;
-	background-position: right;
-	display: inline-block;
-	padding-right: 39px;
-	margin-bottom: 16px;
 }
 
 
@@ -284,6 +291,50 @@
 }
 /* EZ news end */
 
+
+/* EZ search */
+.cqz-ez-search-title {
+	background-image: url(http://cdn.cliqz.com/extension/EZ/search/icon.svg);
+}
+
+.cqz-ez-search-box {
+  border: 1px solid #3E86FC;
+  width: 485px;
+  height: 30px;
+  margin-bottom: 5px;
+  background-color: white;
+}
+
+.cqz-ez-search-box-icon {
+  background-color: #3E86FC;
+  width: 30px;
+  height: 30px;
+}
+
+.cqz-ez-search-box-input {
+  vertical-align: top;
+  font-size: 20px;
+  width: 440px;
+  height: 28px;
+  border: none;
+}
+
+.cqz-ez-search-app {
+    display: inline-block;
+    width: 90px;
+    height: 90px;
+    border-radius: 5px;
+    margin-right: 5px;
+    background-position: center 20%;
+    background-repeat: no-repeat;
+    text-align: center;
+    padding-top: 60px;
+    box-sizing: border-box;
+    color: white;
+    background-size: 50px;
+}
+
+/* EZ search end */
 
 .cqz-ez-btn {
 	border-radius: 4px;
