--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -136,7 +136,6 @@
 .cliqz-result-left-box {
     width: 30px;
     text-align: center;
-    /*visibility: hidden;*/
 }
 
 .cliqz-image {
@@ -162,19 +161,16 @@
 
 .cliqz-result-mid-box {
     overflow: hidden;
-    color: rgba(0,0,0,0.54);
 }
 
 .cliqz-result-right-box {
-    /*visibility: hidden;*/
 }
 
 .cliqz-result-title-box {
     font-size: 12pt;
     font-weight: 500;
     padding-bottom: 3px;
-    display: inline-block;
-    color: rgba(0,0,0,0.87);;
+    display: inline-block;;
 }
 
 .cliqz-result-url-box {
@@ -184,14 +180,11 @@
 }
 
 .cliqz-result-url-host {
-    /*color: #006666;*/
-    color: rgba(46,125,50,0.84);
+    color: #006666;
 }
 
 .cliqz-result-url-path {
-    /*color: #cccccc;*/
-    /*color: rgba(64,64,0,0.87);*/
-    color: rgba(192,192,192,0.87);
+    color: #cccccc;
 }
 
 .cliqz-result-url-ssl {
@@ -207,7 +200,7 @@
 }
 
 .cliqz-result-item-box {
-    border-bottom: 1px solid #E0E0E0;
+    border-bottom: 1px solid #CCC;
 }
 
 .cliqz-result-item-box[type="cliqz-extra"] {
@@ -245,8 +238,7 @@
 }
 
 .cliqz-result-item-box[selected="true"] {
-    /*background-color: #eefafe;*/
-    background-color: #E1F5FE;
+    background-color: #eefafe;
 }
 
 .cliqz-result-generic {
@@ -505,175 +497,6 @@
 }
 /* END cluster */
 
-/* pattern */
-
-.cliqz-pattern {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-}
-
-.cliqz-pattern-logo {
-    float: left;
-    height: 72px;
-    width: 72px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 72px 72px;
-}
-
-.cliqz-pattern-circle {
-    float: left;
-    border-radius: 50%;
-    text-align: center;
-    font-family: sans-serif;
-    overflow: hidden;
-    display: table-cell;
-    vertical-align: middle;
-    color: rgba(255,255,255,0.94);
-    width: 64px;
-    height: 64px;
-    line-height: 64px;
-    font-size: 22pt;
-    margin-left:30px;
-    margin-top:12px;
-    background: #BFBFBF;
-    -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-.cliqz-pattern-logo {
-  float: left;
-  border-radius: 50%;
-  text-align: center;
-  font-family: sans-serif;
-  overflow: hidden;
-  display: table-cell;
-  vertical-align: middle;
-  color: rgba(255,255,255,0.94);
-  width: 64px;
-  height: 64px;
-  line-height: 64px;
-  font-size: 22pt;
-  margin-left:30px;
-  margin-top:12px;
-  background: white;
-  background-image: url(chrome://cliqzres/content/skin/cliqz.png);
-  background-repeat: no-repeat;
-  background-position: 10px 10px;
-  background-size: 44px 44px;
-  -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-.cliqz-pattern-title-container {
-    position:absolute;
-    left:0px;
-    right:0px;
-    top:0px;
-    height:44px;
-    line-height: 44px;
-    background: #F5F5F5;
-    /*color: #424242;*/
-    color: rgba(0,0,0,0.87);
-    font-size: 16px;
-    text-decoration: bold;
-    -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    white-space:nowrap;
-}
-
-.cliqz-pattern-title-text-container {
-    overflow:hidden;
-    position:absolute;
-    top:0;
-    left:125px;
-    right: 20px;
-    word-wrap: break-word;
-    white-space: nowrap;
-}
-
-.cliqz-pattern-title-text {
-    max-width:70%;
-    overflow:hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    display:inline-block;
-}
-
-.cliqz-pattern-title-link {
-    display:inline-block;
-    color:rgba(0,0,0,0.54);
-    overflow:hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    padding-left: 15px;
-}
-
-.cliqz-pattern-entries {
-    white-space: nowrap;
-    overflow:hidden;
-}
-
-.cliqz-pattern-entry-title {
-    font-size: 13px;
-    margin-left: 5px;
-    display:inline-block;
-    text-decoration: underline;
-    color: rgba(46,125,50,0.84);
-    overflow: hidden;
-    max-width: 40%;
-}
-.cliqz-pattern-entry-link {
-  font-size: 13px;
-  color:rgba(127,127,127,0.54);
-  font-weight: normal;
-  text-decoration: none;
-  padding-left: 40px;
-  max-width: 30%;
-  overflow: hidden;
-  display:inline-block;
-}
-
-.cliqz-pattern-entry-date {
-  font-size: 13px;
-  color:rgba(127,127,127,0.54);
-  font-weight: normal;
-  text-decoration: none;
-  padding-left: 40px;
-  max-width: 10%;
-  overflow: hidden;
-  display:inline-block;
-}
-
-.cliqz-pattern-entry-favicons {
-  padding-left: 40px;
-  max-width: 16px;
-  overflow: hidden;
-  display:inline-block;
-}
-
-.cliqz-pattern-element {
-    line-height: 20px;
-    height: 22px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.cliqz-pattern-favicon {
-  float:left;
-  height: 22px;
-  width: 16px;
-  background-repeat: no-repeat;
-  background-position: 0px 2px;
-  background-size: 16px 16px;
-}
-
-/* END pattern */
-
 /* series */
 
 .cliqz-series-title-box {
@@ -740,7 +563,7 @@
 
 /* news */
 .cliqz-news-ago-line {
-    color: rgba(244,67,54,0.84);
+    color: red;
     font-weight: bold;
 }
 
@@ -795,6 +618,175 @@
     white-space: normal;
 }
 /* end news */
+
+/* pattern */
+
+.cliqz-pattern {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+.cliqz-pattern-logo {
+  float: left;
+  height: 72px;
+  width: 72px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 72px 72px;
+}
+
+.cliqz-pattern-circle {
+  float: left;
+  border-radius: 50%;
+  text-align: center;
+  font-family: sans-serif;
+  overflow: hidden;
+  display: table-cell;
+  vertical-align: middle;
+  color: rgba(255,255,255,0.94);
+  width: 64px;
+  height: 64px;
+  line-height: 64px;
+  font-size: 22pt;
+  margin-left:30px;
+  margin-top:12px;
+  background: #BFBFBF;
+  -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.cliqz-pattern-logo {
+  float: left;
+  border-radius: 50%;
+  text-align: center;
+  font-family: sans-serif;
+  overflow: hidden;
+  display: table-cell;
+  vertical-align: middle;
+  color: rgba(255,255,255,0.94);
+  width: 64px;
+  height: 64px;
+  line-height: 64px;
+  font-size: 22pt;
+  margin-left:30px;
+  margin-top:12px;
+  background: white;
+  background-image: url(chrome://cliqzres/content/skin/cliqz.png);
+  background-repeat: no-repeat;
+  background-position: 10px 10px;
+  background-size: 44px 44px;
+  -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.cliqz-pattern-title-container {
+  position:absolute;
+  left:0px;
+  right:0px;
+  top:0px;
+  height:44px;
+  line-height: 44px;
+  background: #F5F5F5;
+  /*color: #424242;*/
+  color: black;
+  font-size: 16px;
+  text-decoration: bold;
+  -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  white-space:nowrap;
+}
+
+.cliqz-pattern-title-text-container {
+  overflow:hidden;
+  position:absolute;
+  top:0;
+  left:125px;
+  right: 20px;
+  word-wrap: break-word;
+  white-space: nowrap;
+}
+
+.cliqz-pattern-title-text {
+  max-width:70%;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display:inline-block;
+}
+
+.cliqz-pattern-title-link {
+  display:inline-block;
+  color:rgba(0,0,0,0.54);
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-left: 15px;
+}
+
+.cliqz-pattern-entries {
+  white-space: nowrap;
+  overflow:hidden;
+}
+
+.cliqz-pattern-entry-title {
+  font-size: 13px;
+  margin-left: 5px;
+  display:inline-block;
+  text-decoration: none;
+  color: #800080;
+  overflow: hidden;
+  max-width: 40%;
+}
+.cliqz-pattern-entry-link {
+  font-size: 13px;
+  color:rgba(127,127,127,0.54);
+  font-weight: normal;
+  text-decoration: none;
+  padding-left: 40px;
+  max-width: 30%;
+  overflow: hidden;
+  display:inline-block;
+}
+
+.cliqz-pattern-entry-date {
+  font-size: 13px;
+  color:rgba(127,127,127,0.54);
+  font-weight: normal;
+  text-decoration: none;
+  padding-left: 40px;
+  max-width: 10%;
+  overflow: hidden;
+  display:inline-block;
+}
+
+.cliqz-pattern-entry-favicons {
+  padding-left: 40px;
+  max-width: 16px;
+  overflow: hidden;
+  display:inline-block;
+}
+
+.cliqz-pattern-element {
+  line-height: 20px;
+  height: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.cliqz-pattern-favicon {
+  float:left;
+  height: 22px;
+  width: 16px;
+  background-repeat: no-repeat;
+  background-position: 0px 2px;
+  background-size: 16px 16px;
+}
+
+/* END pattern */
 
 /* hq */
 .cliqz-hq-language {
