--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -193,12 +193,12 @@
 /* EZ generic */
 .cqz-ez-title {
 	font-size: 18px;
-	background-size: 20px;
+	background-size: 18px;
 	background-repeat: no-repeat;
 	background-position: right;
 	display: inline-block;
 	padding-right: 30px;
-	margin-bottom: 8px;
+	margin-bottom: 5px;
 }
 
 /* end EZ generic */
@@ -207,19 +207,20 @@
 .cqz-ez-banking-box {
 	float: left;
 	margin-top: 12px;
-	padding-top: 7px;
 }
 
 .cqz-ez-banking-opt {
 	background-color: #efefef;
 	width: 130px;
+	height: 110px;
 	background-size: 85px 85px;
 	background-repeat: no-repeat;
 	margin-left: 10px;
 	background-position: 50% -4px;
 	text-align: center;
-	padding: 91px 0 5px 0;
-	border-radius: 4px;
+	box-sizing: border-box;
+	padding-top: 80px;
+	border-radius: 6px;
 	color: #323232;
 }
 
@@ -257,23 +258,25 @@
 }
 
 .entity-news-stories {
-	margin-top: 12px;
+	margin-top: 6px;
 }
 
 .entity-news-story {
-  padding: 3px 0;
+  padding: 4px 0;
   position: relative;
 }
 
 .entity-news-story-description {
   vertical-align: top;
-  padding: 0 0 0 5px;
+  padding: 0 0 0 14px;
 }
 
 .entity-news-story-title {
   color: #333333;
   max-width: 550px;
-  font-size: 16px
+  font-size: 16px;
+  max-height: 2em;
+  overflow: hidden;
 }
 
 .entity-news-story:hover .entity-news-story-title {
@@ -281,8 +284,6 @@
 }
 .entity-news-story-time {
     color: #aaaaaa;
-	position: absolute;
-	bottom: 6px;
 	font-size: 13px
 }
 
@@ -308,9 +309,9 @@
 
 .cqz-ez-search-box {
   border: 1px solid #3E86FC;
-  max-width: 434px;
+  max-width: 400px;
   height: 20px;
-  margin-bottom: 15px;
+  margin: 5px 0 15px 0px;
   background-color: white;
 }
 
@@ -318,12 +319,13 @@
   background-color: #3E86FC;
   width: 20px;
   height: 20px;
+  float: right;
 }
 
 .cqz-ez-search-box-input {
   vertical-align: top;
   font-size: 14px;
-  width: 408px;
+  width: 378px;
   height: 18px;
   border: none;
 }
@@ -332,7 +334,7 @@
     display: inline-block;
     width: 80px;
     height: 80px;
-    border-radius: 5px;
+    border-radius: 6px;
     margin-right: 5px;
     background-position: center 20%;
     background-repeat: no-repeat;
@@ -340,24 +342,22 @@
     padding-top: 60px;
     box-sizing: border-box;
     color: white;
-    background-size: 50px;
+    background-size: 45px;
 }
 
 /* EZ search end */
 
 .cqz-ez-btns {
-	margin-top: 7px;
+	margin: 7px 0 10px 0;
 }
 
 .cqz-ez-btn {
-	border-radius: 4px;
+	border-radius: 6px;
 	cursor: pointer;
-	text-align: center;
-	margin: 5px auto;
 	color: white;
-	font-size: 16px;
-	padding: 10px 15px;
-	margin-right: 10px;
+	font-size: 14px;
+	padding: 7px 10px;
+	margin: 0 10px 10px 0;
 }
 
 .cqz-result-padding {
