--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -317,7 +317,157 @@
 
 /* End last search history */
 
-/* weather */
+/* airlinesEZ.tmp --- thuy@cliqz.com - 15Jan2015 */
+.EZ-airlines-bigcontainer{
+ margin-left: 22px;
+ background-color: white;
+ height: 180px;
+ font-size: 14px;
+}
+
+.EZ-airlines-bigcontainer [url] {
+ cursor: pointer;
+}
+
+.EZ-airlines-title {
+  background-color: white;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.EZ-airlines-name {
+  background-color: white;
+  margin-top: 17.5px;
+  margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 80%;
+  font-weight: 400;
+  color: #333333;
+  float: left;
+}
+
+.EZ-airlines-name_icon{
+  height: 26px;
+  width: 26px;
+  margin-left: 15px;
+  margin-top: 13px;
+  background-color: white;
+}
+
+.EZ-airlines-firstTile{
+  width: 100px;
+  height: 100px;
+  margin-bottom: 17.5px;
+  margin-right: 16px;
+  background-color: white;
+  text-indent: 8px;
+  float: left;
+}
+
+.EZ-airlines-firstTile-smallTile{
+  width: 100px;
+  height: 28px;
+  border-radius: 3px;
+  color: white;
+}
+
+.EZ-airlines-firstTile-smallTile_padding{
+  height: 8px;
+}
+
+.EZ-airlines-center-vertical_text{
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  line-height: 100%;
+}
+
+.EZ-airlines-Tiles{
+  width: 110px;
+  height: 100px;
+  margin-bottom: 17.5px;
+  margin-right: 8px;
+  border-radius: 3px;
+  background-color: #efefef;
+  text-align: center;
+  float: left;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.EZ-airlines-Tiles_icon{
+ background-repeat: no-repeat;
+ background-position: center center;
+ background-size: 50% 50%;
+ height: 71px;
+}
+
+.EZ-airlines-Tiles_text{
+  padding-bottom: 12px;
+}
+
+/*--- END airlinesEZ----*/
+
+/* weatherEZ.tpl --- thuy@cliqz.com - 15Jan2015 */
+.EZ-weather-bigcontainer{
+ padding-left: 22px;
+ background-color: white;
+ height: 180px;
+}
+
+.EZ-weather-city {
+  background-color: white;
+  font-size: 18px;
+  font-weight: 400;
+  color: #333333;
+  padding-top: 14px;
+  padding-bottom: 20px;
+  padding-left: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 0px;
+}
+
+.EZ-weather-container {
+ float:left;
+ width: 70px;
+ margin-top: 0px;
+ margin-right: 37px;
+ background-color: white;
+}
+
+.EZ-weather-date {
+  font-size: 16px;
+  color: #333333;
+  text-align: center;
+  overflow: hidden;
+  margin-top: 0px;
+  background-color: white;
+  line-height: 100%;
+}
+
+.EZ-weather-img {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: white;
+  background-size: 54px 74px;
+  height: 76px;
+}
+
+.EZ-weather-temp {
+  font-size:16px;
+  color: #333333;
+  text-align:center;
+  padding-bottom: 16px;
+  background-color: white;
+  line-height: 100%
+}
+/*---- END weatherEZ ---- */
+
+/* weather ---- old, used by weather.tpl*/
 .cliqz-weather-left-box {
     padding-top: 10px;
     margin-right: 20px;
