--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -714,44 +714,49 @@
 /*  EZ celeb */
 
 .cliqz-celeb {
-    height: 130px;
+    padding: 17.5px 22px;
+    font-size: 14px;
+    position: relative;
+    border-bottom: 1px solid #ccc
 }
 
-.cliqz-celeb-info {
-    float: left;
-}
-
-.cliqz-celeb-name {
-    font-size: 24px;
-    color: blue;
-}
-
-.cliqz-celeb-picture {
-    float: left;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 120px;
-    height: 120px;
-}
-
-.cliqz-celeb-images {
-    width: 260px;
-    height: 130px;
-    float: right;
+.cqz-celeb-images {
+    height: 60px;
     overflow: hidden;
 }
 
-.cliqz-celeb-image {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    width: 60px;
+.cqz-celeb-image {
     height: 60px;
-    display: inline-block;
-    background-color: red;
+    margin-right: 8px;
+    border-radius: 6px;
 }
 
+.cqz-celeb-who {
+    font-size: 18px;
+    margin: 8px 0px;
+}
+.cqz-celeb-who span {
+    color: #ccc;
+}
+
+.cqz-celeb-social {
+    height: 15px;
+    margin-bottom: 8px;
+    margin-right: 8px;
+}
+
+.cqz-celeb-logo {
+    background-color: #ccc;
+    border-radius: 50%;
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    line-height: 80px;
+    font-size: 40px;
+    text-align: center;
+    bottom: 22px;
+    right: 22px;
+}
 /* end EZ celeb */
 
 /* people */
