--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -616,109 +616,7 @@
 /* pattern */
 
 .cliqz-pattern {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 20px;
-}
-
-.cliqz-pattern-logo {
-  float: left;
-  height: 72px;
-  width: 72px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 72px 72px;
-}
-
-.cliqz-pattern-circle {
-  float: left;
-  border-radius: 50%;
-  text-align: center;
-  font-family: sans-serif;
-  overflow: hidden;
-  display: table-cell;
-  vertical-align: middle;
-  color: rgba(255,255,255,0.94);
-  width: 64px;
-  height: 64px;
-  line-height: 64px;
-  font-size: 22pt;
-  margin-left:30px;
-  margin-top:12px;
-  background: #BFBFBF;
-  -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-.cliqz-pattern-logo {
-  float: left;
-  border-radius: 50%;
-  text-align: center;
-  font-family: sans-serif;
-  overflow: hidden;
-  display: table-cell;
-  vertical-align: middle;
-  color: rgba(255,255,255,0.94);
-  width: 64px;
-  height: 64px;
-  line-height: 64px;
-  font-size: 22pt;
-  margin-left:30px;
-  margin-top:12px;
-  background: white;
-  background-image: url(chrome://cliqzres/content/skin/cliqz.png);
-  background-repeat: no-repeat;
-  background-position: 10px 10px;
-  background-size: 44px 44px;
-  -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-.cliqz-pattern-title-container {
-  position:absolute;
-  left:0px;
-  right:0px;
-  top:0px;
-  height:44px;
-  line-height: 44px;
-  background: #F5F5F5;
-  /*color: #424242;*/
-  color: black;
-  font-size: 16px;
-  text-decoration: bold;
-  -moz-box-shadow:    0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  box-shadow:         0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  white-space:nowrap;
-}
-
-.cliqz-pattern-title-text-container {
-  overflow:hidden;
-  position:absolute;
-  top:0;
-  left:125px;
-  right: 20px;
-  word-wrap: break-word;
-  white-space: nowrap;
-}
-
-.cliqz-pattern-title-text {
-  max-width:70%;
-  overflow:hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  display:inline-block;
-}
-
-.cliqz-pattern-title-link {
-  display:inline-block;
-  color:rgba(0,0,0,0.54);
-  overflow:hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  padding-left: 15px;
+  padding-left: 22px;
 }
 
 .cliqz-pattern-entries {
@@ -726,39 +624,27 @@
   overflow:hidden;
 }
 
+.cliqz-pattern-title {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 .cliqz-pattern-entry-title {
-  font-size: 13px;
   margin-left: 5px;
   display:inline-block;
   text-decoration: none;
-  color: #800080;
+  color:rgba(127,127,127,0.54);
   overflow: hidden;
-  max-width: 40%;
+  max-width: 85%;
 }
 .cliqz-pattern-entry-link {
-  font-size: 13px;
+  margin-left: 5px;
   color:rgba(127,127,127,0.54);
   font-weight: normal;
   text-decoration: none;
-  padding-left: 40px;
-  max-width: 30%;
-  overflow: hidden;
-  display:inline-block;
-}
-
-.cliqz-pattern-entry-date {
-  font-size: 13px;
-  color:rgba(127,127,127,0.54);
-  font-weight: normal;
-  text-decoration: none;
-  padding-left: 40px;
-  max-width: 10%;
-  overflow: hidden;
-  display:inline-block;
 }
 
 .cliqz-pattern-entry-favicons {
-  padding-left: 40px;
   max-width: 16px;
   overflow: hidden;
   display:inline-block;
@@ -766,18 +652,33 @@
 
 .cliqz-pattern-element {
   line-height: 20px;
-  height: 22px;
+  height: 23px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 .cliqz-pattern-favicon {
   float:left;
-  height: 22px;
+  height: 23px;
   width: 16px;
   background-repeat: no-repeat;
-  background-position: 0px 2px;
+  background-position: 0px 3px;
   background-size: 16px 16px;
+}
+
+.cliqz-pattern-logo {
+  width: 54px;
+  height: 54px;
+  border-radius: 50%;
+  margin-right: 18px;
+  position: absolute;
+  right: 0px;
+  top: 63px;
+  background: #efefef;
+  background-image: url(chrome://cliqzres/content/skin/cliqz.png);
+  background-repeat: no-repeat;
+  background-position: 11px 11px;
+  background-size: 32px 32px;
 }
 
 /* END pattern */
