Arrow keys for navigation inside history

--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -555,6 +555,10 @@
   font-size: 15px;
 }
 
+.cliqz-pattern-element[selected="true"] {
+  /*background:black;*/
+}
+
 .cliqz-pattern-element-title {
   color: #9C27B0;
   color:rgba(128,0,128,0.60);
