--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -212,6 +212,44 @@
 	margin-bottom: 1px;
 }
 
+.cqz-ez-generic-box {
+  float: left;
+  margin-top: 12px;
+}
+
+/* default btn colours */
+.cqz-ez-generic-box .cqz-ez-btn:nth-of-type(1) {
+  background-color: #5ea3f9;
+}
+
+.cqz-ez-generic-box .cqz-ez-btn:nth-of-type(2) {
+  background-color: #2fc4fc;
+}
+
+.cqz-ez-generic-box .cqz-ez-btn:nth-of-type(3) {
+  background-color: #abc8e2;
+}
+
+.cqz-ez-generic-opt {
+  background-color: #efefef;
+  min-width: 110px;
+  max-width: 200px;
+  height: 100px;
+  background-size: 60px auto;
+  background-repeat: no-repeat;
+  margin-left: 8px;
+  background-position: 50% calc(70% - 20px);
+  text-align: center;
+  box-sizing: border-box;
+  padding-top: 74px;
+  border-radius: 3px;
+  color: #323232;
+}
+
+.cqz-ez-generic-elems {
+  margin-top: 10px;
+}
+
 /* end EZ generic */
 
 /* EZ banking */
