Arrow navigation inside history

--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -113,6 +113,7 @@
 	padding: 0px 20px;
 	display: inline-block;
 	overflow: hidden;
+  cursor:pointer;
 }
 
 /* visited result - history, bookmark, ...*/
