entity video + banking changed

--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -260,6 +260,10 @@
 	margin-top: 12px;
 }
 
+.cqz-ez-banking-box .cqz-ez-btn {
+  margin-bottom: 5px;
+}
+
 .cqz-ez-banking-opt {
 	background-color: #efefef;
 	width: 110px;
