--- a/cliqz@cliqz.com/chrome/skin/browser_new.css
+++ b/cliqz@cliqz.com/chrome/skin/browser_new.css
@@ -168,13 +168,19 @@
 	margin-right: 18px;
 	position: absolute;
 	right: 0px;
-	text-align: center;
-	line-height: 54px;
-	font-size: 22px;
-	color: white;
-	background-size: 32px;
-	background-position: center center;
-	background-repeat: no-repeat;
+}
+
+.cqz-result-logo div {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 38px;
+  height: 38px;
+  margin: 8px;
+  text-align: center;
+  line-height: 38px;
+  font-size: 22px;
+  color: white;
 }
 
 .cqz-image {
@@ -603,7 +609,7 @@
 	color: white;
 	font-size: 14px;
 	padding: 8px 10px 7px 10px;
-	margin: 0 4px 0 0;
+	margin: 0 6px 0 0;
   max-width: 150px;
 }
 
